methods.basics.Methods.scala.error
Compilation error:
Methods:9: error: too many arguments for method droite: ()Unit
  droite(2)
        ^