methods.basics.Methods.scala.code
def goAndGet() {
  var count=0
  while(!estSurBiscuit())
  	{
      avance()
      count+=1
    }
  prendBiscuit()
  droite(2)
  for (i<-1 to count)
  	{
      avance()
    }
  poseBiscuit()
}

for (i <- 1 to 7) {
    goAndGet();
    right();
    forward();
    left();
}